; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_crtc.c_drm_mode_create_standard_connector_properties.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_crtc.c_drm_mode_create_standard_connector_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.drm_property*, %struct.drm_property* }
%struct.drm_property = type { i32 }

@DRM_MODE_PROP_BLOB = common dso_local global i32 0, align 4
@DRM_MODE_PROP_IMMUTABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"EDID\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"DPMS\00", align 1
@drm_dpms_enum_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_device*)* @drm_mode_create_standard_connector_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drm_mode_create_standard_connector_properties(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.drm_property*, align 8
  %4 = alloca %struct.drm_property*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %5 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %6 = load i32, i32* @DRM_MODE_PROP_BLOB, align 4
  %7 = load i32, i32* @DRM_MODE_PROP_IMMUTABLE, align 4
  %8 = or i32 %6, %7
  %9 = call %struct.drm_property* @drm_property_create(%struct.drm_device* %5, i32 %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0)
  store %struct.drm_property* %9, %struct.drm_property** %3, align 8
  %10 = load %struct.drm_property*, %struct.drm_property** %3, align 8
  %11 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %12 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  store %struct.drm_property* %10, %struct.drm_property** %13, align 8
  %14 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %15 = load i32, i32* @drm_dpms_enum_list, align 4
  %16 = load i32, i32* @drm_dpms_enum_list, align 4
  %17 = call i32 @ARRAY_SIZE(i32 %16)
  %18 = call %struct.drm_property* @drm_property_create_enum(%struct.drm_device* %14, i32 0, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %15, i32 %17)
  store %struct.drm_property* %18, %struct.drm_property** %4, align 8
  %19 = load %struct.drm_property*, %struct.drm_property** %4, align 8
  %20 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %21 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store %struct.drm_property* %19, %struct.drm_property** %22, align 8
  ret i32 0
}

declare dso_local %struct.drm_property* @drm_property_create(%struct.drm_device*, i32, i8*, i32) #1

declare dso_local %struct.drm_property* @drm_property_create_enum(%struct.drm_device*, i32, i8*, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
